--- a/style.css
+++ b/style.css
@@ -1,427 +1,252 @@
-/* * {
-	box-sizing:border-box;
-} */
-
-
-/* h1,h2,h3 {
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	color:#4aaaa5; */
-
-
-/*p {
-	color:#777777;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-} */
-
-html {
-
-	height:100%;
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../images/concrete_seamless.png");
 }
 
-#background {
-
-	z-index:1;
-	bottom:5%;
-	width:100%;
-	height:98%;
-}
-.centerDiv
-{
-	width: 960px;
-	height:100%;
-	margin: auto;
+* {
+  box-sizing: border-box;
 }
 
-.content-area {
+/* general */
 
-	z-index:2;
-	width:960px;
-	height:600;
-	/*height:625px;*/
-
+.container {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  clear: both;
 }
 
-.background-section
-{
-
-	position:absolute;
-	background-image: url("./assets/images/spiration dark.png");
-	height: 100%;
-	width:100%;
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 20px;
 }
 
-.background-section-two
-{
-
-	position:absolute;
-	background-image: url("./assets/images/spiration dark.png");
-	height: 100%;
-	bottom:-100%;
-	width:100%;
+p:last-child {
+  margin-bottom: 0;
 }
 
-.header {
-	position:absolute;
-	z-index: 1;
-	width:100%;
-	height:75px;						/* same height */
-	background-color:#ffffff;
-	border-color:#cccccc;
-}
- body {
- 	height:100%;
- }
-
-.floatLeft
-{
-	float: left;
-}
-.floatRight
-{
-	float: right;
+h1,
+h2,
+h3 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
 }
 
-.yourName {
-
-	z-index: 2;
-	position:absolute;
-	text-align:center;
-	margin:0px;
-	top:0%;
-	left:25px;
-	height:75px;
-	width:300px;
-	background-color:#4aaaa5;
-	color:#ffffff;
+h1 {
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
 }
 
-
-#NLW {
-
-	position:absolute;
-	top:20px;
-	left:20px;
-	z-index: 3;
-	color:#ffffff;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	font-size:30px;
-	font-style:bold;
+h2,
+h3 {
+  font-size: 22px;
 }
 
+/* header */
 
-.nav {
-	position:absolute;
-	right:2%;
-	top:30%;
-	text-align:center;
-	width:300px;
-	height:40px; 
-	color:#777777;
-	background:#ffffff;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-
+#masthead {
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  margin: 0 0 30px;
+  overflow: auto;
+  color: #fff;
+  background: #fff;
+  border-bottom: 2px solid #ccc;
 }
 
-.nav-icons {
-	color:#777777;
-	background:#ffffff;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	text-decoration:none;
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
 }
 
-
-.pipe {
-margin:0 5px 0 5px;
+nav {
+  float: right;
+  margin-top: 25px;
 }
 
-.mainSection {
-
-	position:absolute;
-	top:100px;
-	left:30px;
-	width:650px;
-	height:500px;
-	background:#ffffff;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	border-color:#dddddd;
-	border-width:3px;
+nav a {
+  display: inline-block;
+  padding-left: 15px;
+  margin-left: 15px;
+  line-height: 18px;
+  color: #999;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
 }
 
-#mainSectionPortfolio {
-
-	position:absolute;
-	top:100px;
-	left:30px;
-	width:650px;
-	height:800px;
-	background:#ffffff;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	border-color:#dddddd;
-	border-width:3px;
+nav a:first-child {
+  border-left: 0 none;
 }
 
+/* footer */
 
-#aboutMe {
-	
-	position:absolute;
-	text-align:center;
-	top:5px;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	color:#4aaaa5;
-	margin-left:5%;
-	float:left;
-
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
 }
 
-.portfolio {
-	
-	position:absolute;
-	text-align:center;
-	top:5px;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	color:#4aaaa5;
-	margin-left:5%;
-	float:left;
-	
+/* sidebar */
 
+.sidebar {
+  float: right;
+  width: 100%;
+  max-width: 270px;
+  padding: 30px;
+  margin-bottom: 20px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
-
-
-
-
-#contact {
-	
-	position:absolute;
-	text-align:center;
-	top:5px;
-	font-family: 'Georgia', Times, Times New Roman, serif;
-	color:#4aaaa5;
-	margin-left:5%;
-	float:left;
-
+h3,
+.sidebar h2 {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
+  line-height: 22px;
+  border-bottom: 2px solid #eee;
 }
 
-#hr1 {
-
-position:absolute;
-width:90%;
-left:5%;
-top:50px;
-background-color:#777777;
-
+.social {
+  width: 62px;
+  height: 62px;
+  margin-top: 8px;
+  margin-right: 5px;
 }
 
-
-#profilePic {
-	
-	z-index: 4;
-	position:relative;
-	top:15%;
-	left:5%;
-	width:200px;
-	float;left;
-	
-
+.social:last-child {
+  margin-right: 0;
 }
 
-.paragraph {
-	
-	position:relative;
-	z-index: 1;
-	width:90%;
-	height:200px; 
-	top:15%;
-	left:5%;
-	right:5%;				/* same height */
-	background:#ffffff;
-	color:#777777;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	float:left;
-	
-	}
+/* main */
 
-
-.contactSection {
-	
-	position:relative;
-	z-index: 1;
-	width:90%;
-	height:200px; 
-	top:15%;
-	left:5%;
-	right:5%;				/* same height */
-	background:#ffffff;
-	color:#777777;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	float:left;
-	
-	}
-
-#name {
-	width:300px;
-
+#main-container {
+  padding-top: 130px;
 }
 
-#email {
-
+.main-section {
+  float: left;
+  width: 100%;
+  max-width: 650px;
+  padding: 30px;
+  margin: 0 0 40px;
+  background: #fff;
+  border: 1px solid #ddd;
 }
 
-#message {
+/* portfolio page */
 
-	width:300px;
-	height:200px;
-
+.work {
+  position: relative;
+  float: left;
+  width: 274px;
+  margin: 20px 0 25px;
+  overflow: auto;
 }
 
-#submit {
+.work:nth-child(even) {
+  margin-right: 40px;
+}
 
-position:absolute;
-bottom:-210px;
-width:100px;
-height:50px;
-background-color:#4aaaa5;
-color:#ffffff;
-font-size:15px;
+.work img {
+  width: 100%;
+  border: 0 none;
+  opacity: 0.8;
+}
+
+.work h3 {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 0;
+  font-weight: 300;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  background: #4aaaa5;
+  border-bottom: 0;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
+/* contact page */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+  display: block;
+  width: 100%;
+}
+
+input[type=text],
+input[type=email],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type=submit] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #fff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
 }
 
 
-
-.connectWithMe {
-	
-	position:absolute;
-	text-align:center;
-	top:100px;
-	right:30px;
-	width:270px;
-	height:200px;
-	margin-left:20px;
-	background:#ffffff;
-	color:#4aaaa5;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	float:right;
-}
-
-#hr2 {
-
-position:absolute;
-width:90%;
-top:25%;
-left:5%;
-right:5%;
-background-color:#777777;
+@media screen and (max-width: 980px){
 
 }
 
-#GitHub {
-
-	position:relative;
-	float:left;
-	width:50px;
-	bottom:50px;
-	margin:5px;
-	left:10%;
-}
-
-#Linkdin {
-
-	position:relative;
-	float:left;
-	width:50px;
-	bottom:50px;
-	margin:5px;
-	left:16%;
-}
-
-#StackOverflow {
-
-	position:relative;
-	float:left;
-	width:50px;
-	bottom:50px;
-	margin:5px;
-	left:20%;
-}
-
-.portfolioBox {
-
-	position:absolute;
-	width:650px;
-	height:800px;
-	margin: 70px 10px 10px 10px;
-}
-
-#hangman {
-
-	position:relative;
-	float:left;
-	width:290px;
-	height:215px;
-	margin:10px;
-}
-
-#rpg {
-
-	position:relative;
-	float:left;
-	width:290px;
-	height:215px;
-	margin:10px;
-}
-
-#trivia{
-
-	position:relative;
-	float:left;
-	width:290px;
-	height:215px;
-	margin:10px;
-}
-
-#rutgers {
-
-	position:relative;
-	float:left;
-	width:290px;
-	height:215px;
-	margin:10px;
-}
-
-#rock {
-
-	position:relative;
-	float:left;
-	width:290px;
-	height:215px;
-	margin:10px;
-}
-
-#hr3 {
-	
-	position:fixed;
-	z-index:3;
-	bottom:65px;
-	width:100%;
-	height:10px;
-	background-color:#4aaaa5;
-	left:8px
-
+@media screen and (max-width: 760px){
 
 }
 
+@media screen and (max-width: 640px){
 
-.footer{
-
-	
-	z-index: 1;
-	position:fixed;
-	bottom:0%;
-	width:100%;
-	height:20px;
-	text-align:center;
-	padding:30px;
-	color:#888888;
-	background:#666666;
-	font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	clear:both;
 }
